# phd-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  QUICKSTART.md  README.md  api.py  check_system.py  config.py  dev_setup.py  main.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_system.py  vector_store.py  vector_store_mock.py  version.py  version.sh
.github/: release-drafter.yml
.github/workflows/: linter.yml  unit_tests.yml
agents/: analyst_agent.py  essay_writer_agent.py  pdf_agent.py  supervisor_agent.py  web_search_agent.py
examples/: basic_research.py  neat_research.py
src/: main.py
src/phd_agent/: api.py  config.py  file_utils.py  llm_utils.py  main.py  models.py  research_manager.py  vector_store.py  vector_store_mock.py
src/phd_agent/agents/: __init__.py  agent_utils.py  analyst_agent.py  essay_writer_agent.py  pdf_agent.py  supervisor_agent.py  web_search_agent.py
tests/: README.md  test_file_utils.py  test_system.py  testlib.py  vector_store_mock.py
tests/unit/: test_file_utils.py
